--- a/index.html
+++ b/index.html
@@ -16,13 +16,33 @@ body { background: url(PICTURES/background.jpg); }
 <p><font size="5" face="Comic Sans MS" color="black">Если вы хотите узнать об изменениях сайта, то зайдите на:</font></p>
 <p><font size="4" face="Comic Sans MS" color="black"><a href="logs.html">СТРАНИЦУ ИЗМЕНЕНИЙ</a></font></p>
 <p><font size="3" color="black" face="Comic Sans MS">Связаться с нами: <a href="feedback.html">отзывы и предложения</a></font></p>
-   var texts = [
-  "I am a sentence.",
-  "Some nice stuff.",
-  "I am random too!"
-];
+<SCRIPT LANGUAGE="JAVASCRIPT">
+<!-- 
 
-document.getElementById('randomText').value = texts[Math.floor(Math.random()*texts.length)];
+var r_text = new Array (); 
+r_text[0] = "I was just thinking about you!"; 
+r_text[1] = "You are a great example for others."; 
+r_text[2] = "You have great ideas."; 
+r_text[3] = "When I grow up I want to be you!"; 
+r_text[4] = "I appreciate all of your opinions."; 
+
+var i = Math.floor(r_text.length * Math.random()); 
+
+document.write("<br /><br /><br /><br /><br /><br /><br /><center><FONT SIZE=72><FONT COLOR='#FFFFFF'>" + 
+r_text[i]  + "</FONT></center><br />"); 
+
+var bgcolorlist=new Array("#228B22", "#FFD700", "#ADFF2F", "#FF69B4", "#CD5C5C", "#4B0082", "#7CFC00", "#ADD8E6", "#E84643", "#ED0A07", "#EA2907", "#E5294B", "#E00D26", "#FF3030", "#FC7500", "#F95700", "#F43900", "#F95620") 
+
+document.body.style.background=bgcolorlist[Math.floor(Math.random()*bgcolorlist.length)]; 
+
+</script><br> <br> 
+    <br> 
+    <br> 
+    <style type="text/css"> 
+<!-- 
+body,td,th { 
+     color: #000; 
+     font-family: Helvetica, sans-serif; 
 <font size="3" color="3333FF" face="Comic Sans MS">Ptichka production <font size="3" color="black" face="Comic Sans MS">(2020 - 2024). ALL RIGHTS REVERSED</a></p>
 </body>
 </head>
