--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
  <head>
   <meta>
   <title>Ptichka PROD</title>
+ <link rel="icon" href="PICTURES\logo.png">
 <body bg="background="PICTURES\fon.jpg">
 <img src="PICTURES\1MAIN.jpg">
 <style>
