--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
  <head>
   <meta>
-  <title>Ptichka PROD</title>
+  <title>Ptichka prod. - главная</title>
  <link rel="icon" href="PICTURES\logo.png">
 <body bg="background="PICTURES\fon.jpg">
 <img src="PICTURES\1MAIN.jpg">
