--- a/logs.html
+++ b/logs.html
@@ -1,7 +1,8 @@
 <html>
  <head>
   <meta>
-  <title>Ptichka PROD</title>
+    <title>Ptichka prod. - логи</title>
+ <link rel="icon" href="PICTURES\logo.png">
 <body bg="background="PICTURES\fon.jpg">
 <img src="PICTURES\1MAIN.jpg">
 <style>
@@ -10,18 +11,20 @@ body { background: url(PICTURES/background.jpg); }
 <link rel="stylesheet" href="style.css">
   <p><font size="5" color="black" face="Comic Sans MS">СПИСОК ИЗМЕНЕНИЙ САЙТА (что то типа логов)</font></p>
   <p><font size="4" color="black" face="Comic Sans MS">Примечание: сортировка событий идет от новых к старым (сверху вниз)</font></p>
-<p><font size="4.5" color="black" face="Comic Sans MS">Лето (14 июня),2024-й год:</font></p>
+<p><font size="4.5" color="black" face="Comic Sans MS">15 июня, 2024-й год:</font></p>
+<li><font size="4" color="black" face="Comic Sans MS">Добавлена иконка для сайта</font></li>
+<p><font size="4.5" color="black" face="Comic Sans MS">14 июня, 2024-й год:</font></p>
  <ul>
-<li><font size="4" color="black" face="Comic Sans MS">Добавлен фидбек (отзывы и предложения)</font></li>
+<li><font size="4" color="black" face="Comic Sans MS">Добавлен <a href="feedback.html">фидбек (отзывы и предложения)</a></font></li>
 <li><font size="4" color="black" face="Comic Sans MS">Обновился фон</font></li>
 <li><font size="4" color="black" face="Comic Sans MS">Under construction.</font></li>
 <li><font size="4" color="black" face="Comic Sans MS">Сайт стал доспупен по ссылке</font></li>
   </ul>
-<p><font size="4.5" color="black" face="Comic Sans MS">Лето (июнь), 2023-й год:</font></p>
+<p><font size="4.5" color="black" face="Comic Sans MS">июнь, 2023-й год:</font></p>
  <ul>
 <li><font size="4" color="black" face="Comic Sans MS">Cайт был заброшен на неопределенный срок</font</li>
  </ul>
-<p><font size="4.5" color="black" face="Comic Sans MS">Весна (апрель-май), 2023-й год:</font></p>
+<p><font size="4.5" color="black" face="Comic Sans MS">апрель-май, 2023-й год:</font></p>
  <ul>
 <li><font size="4" color="black" face="Comic Sans MS">Появился фон, изменился шрифт, появились крисивые оформления</font></li>
 <li><font size="4" color="black" face="Comic Sans MS">Появился CSS</font></li>
