--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ body { background: url(PICTURES/background.jpg); }
 </style>
 <link rel="stylesheet" href="style.css">
   <p><font size="5" color="black" face="Comic Sans MS">Добро пожаловать на главную страницу компании <font size="5" color="3333FF" face="Comic Sans MS">Ptichka Production<font size="5" color="black" face="Comic Sans MS">!</font></p>
-<p><font size="5" color="black" face="Comic Sans MS">Куда вы хотите отправиться? Если вы хотите узнать о нас, то вам надо на:</font>
-<p><font size="4" color="green" face="Comic Sans MS">Нажмите<a href="inform.html"> сюда</a>, если хотите узнать о нас</font></p>
+<p><font size="5" color="black" face="Comic Sans MS">Куда вы хотите отправиться?: Если хотите узнать о нас, то:</font>
+<p><font size="4" color="black" face="Comic Sans MS">Перейдите <a href="inform.html">сюда</a></font></p>
 <p><font size="5" color="black" face="Comic Sans MS">Если хотите узнать, чем мы занимаемся, отправьтесь на:</font></p>
 <p><font size="4" color="green" face="Comic Sans MS"><a href="underconstruction.html">СТРАНИЦУ ПРОЕКТОВ</a></font></p>
 <p><font size="5" face="Comic Sans MS" color="black">Если вы хотите узнать об изменениях сайта, то зайдите на:</font></p>
