--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body { background: url(PICTURES/background.jpg); }
 </style>
 <link rel="stylesheet" href="style.css">
   <p><font size="5" color="black" face="Comic Sans MS">Добро пожаловать на главную страницу компании <font size="5" color="3333FF" face="Comic Sans MS">Ptichka Production<font size="5" color="black" face="Comic Sans MS">!</font></p>
-<p><font size="5" color="black" face="Comic Sans MS">Куда вы хотите отправиться?: Если хотите узнать о нас, то перейдите на:</font>
+<p><font size="5" color="black" face="Comic Sans MS">Куда вы хотите отправиться? Если хотите узнать о нас, то перейдите на:</font>
 <p><font size="4" color="black" face="Comic Sans MS"><a href="inform.html">ИНФОРМАЦИОННУЮ СТРАНИЦУ</a></font></p>
 <p><font size="5" color="black" face="Comic Sans MS">Если хотите узнать, чем мы занимаемся, отправьтесь на:</font></p>
 <p><font size="4" color="green" face="Comic Sans MS"><a href="underconstruction.html">СТРАНИЦУ ПРОЕКТОВ</a></font></p>
