--- a/feedback.html
+++ b/feedback.html
@@ -1,10 +1,10 @@
 <html>
  <head>
   <meta>
-  <title>Ptichka PROD</title>
+  <title>Ptichka prod. - feedback</title>
 <body bg="background="PICTURES\fon.jpg">
  <a href="index.html">
-<img src="PICTURES\1MAIN.jpg">
+<img src="PICTURES\feedback.jpg">
  </a>
 <style>
 body { background: url(PICTURES/background.jpg); }
