--- a/feedback.html
+++ b/feedback.html
@@ -4,7 +4,7 @@
   <title>Ptichka prod. - feedback</title>
 <body bg="background="PICTURES\fon.jpg">
  <a href="index.html">
-<img src="PICTURES\feedback.jpg">
+<img src="PICTURES\feedback.png">
  </a>
 <style>
 body { background: url(PICTURES/background.jpg); }
