--- a/3rdinfopage.html
+++ b/3rdinfopage.html
@@ -5,15 +5,15 @@
   <title>Ptichka prod. - информация</title>
  <body bgcolor="grey">
 <style>
-body { background: url(PICTURES/fon.png); }
+body { background: url(PICTURES/background.jpg); }
 </style>
 <img src="PICTURES/2INFO.jpg">
 <link rel="stylesheet" href="style.css">
 <p><font size="5" color="black" face="Comic Sans MS">ÍÅÌÍÎÃÎ ÎÁ ÝÒÎÉ ÈÃÐÅ:</font></p>
   <p><font size="4" color="black" face="Comic Sans MS">"FIVE NIGHTS AT STIKMAN (ÏßÒÜ ÍÎ×ÅÉ Ó ÑÒÈÊÌÅÍÀ)"- ïåðâàÿ èãðà, ñîçäàííàÿ ýòîé êîìïàíèåé, îñíîâàííàÿ íà äâèæêå "Scratch" è íàïèñàííàÿ (ñäåëàííàÿ) â ïðîãðàììå "Pocket Code"</font></p>
-  <p><font size="5" color="black" face="Comic Sans MS">ÄÅÉÑÒÂÈß:</font></p>
-<p><font size="4" color="green" face="Comic Sans MS"><a href="inform.html">ÂÅÐÍÓÒÜÑß ÍÀÇÀÄ</a></font></p>
-<font size="3" color="3333FF" face="Comic Sans MS">Ptichka production <font size="3" color="black" face="Comic Sans MS">(May 2023). ALL RIGHTS REVERSED</p>
+  <p><font size="5" color="black" face="Comic Sans MS">Действия:</font></p>
+<p><font size="4" color="green" face="Comic Sans MS"><a href="inform.html">Вернуться</a></font></p>
+<font size="3" color="3333FF" face="Comic Sans MS">Ptichka production <font size="3" color="black" face="Comic Sans MS">(2020-2024). ALL RIGHTS REVERSED</p>
 </head>
 </body>
 </html>
