--- a/inform.html
+++ b/inform.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <meta>
-  <title>Информ.страница</title>
+  <title>Ptichka prod. - информацияа</title>
  <body bgcolor="grey">
 <style>
 body { background: url(PICTURES/background.jpg); }
