--- a/inform.html
+++ b/inform.html
@@ -3,6 +3,7 @@
  <head>
   <meta>
   <title>Ptichka prod. - информацияа</title>
+  <link rel="icon" href="PICTURES\logo.png">
  <body bgcolor="grey">
 <style>
 body { background: url(PICTURES/background.jpg); }
