--- a/feedback.html
+++ b/feedback.html
@@ -28,11 +28,7 @@ body { background: url(PICTURES/background.jpg); }
       </div>
       <div class="form-group">
         <label for="email" class="form-label"><p><font size="4" color="black" face="Comic Sans MS">Email:</font></label>
-        <input id="email" name="email" class="form-input" placeholder="Ваша почта" type="email" />
-      </div>
-      <div class="form-group">
-        <label for="phone" class="form-label"><p><font size="4" color="black" face="Comic Sans MS">Телефон:</font></label>
-        <input id="phone" name="phone" class="form-input" placeholder="8(800)-555-35-35" type="text" />
+        <input id="email" name="email" class="form-input" placeholder="Необязательно" type="email" />
       </div>
       <div class="form-group">
         <label for="message" class="form-label"><p><font size="4" color="black" face="Comic Sans MS">Ваш текст:</font></label>
