--- a/feedback.html
+++ b/feedback.html
@@ -3,6 +3,7 @@
   <meta>
   <title>Ptichka prod. - feedback</title>
 <body bg="background="PICTURES\fon.jpg">
+ <link rel="icon" href="PICTURES\logo.png">
  <a href="index.html">
 <img src="PICTURES\feedback.png">
  </a>
