--- a/PICTURES/easteregg.html
+++ b/PICTURES/easteregg.html
@@ -3,9 +3,9 @@
   <meta>
   <title>Ptichka production - ?</title>
 <body bg="background="easteregg.jpg">
-<img src="PICTURES\уфыеукупп.зтg">
+<img src="1MAIN.jpg">
 <style>
-body { background: url(PICTURES/background.jpg); }
+body { background: url(easteregg.png); }
 </style>
 <link rel="stylesheet" href="style.css">
   <p><font size="5" color="black" face="Comic Sans MS">Ты нашел пасхалку =)</font></p>
