--- a/PICTURES/easteregg.html
+++ b/PICTURES/easteregg.html
@@ -2,6 +2,7 @@
  <head>
   <meta>
   <title>Ptichka production - ?</title>
+  <link rel="icon" href="PICTURES\logo.png">
 <body bg="background="easteregg.jpg">
 <img src="1MAIN.jpg">
 <style>
@@ -10,7 +11,7 @@ body { background: url(easteregg.png); }
 <link rel="stylesheet" href="style.css">
   <p><font size="5" color="black" face="Comic Sans MS">Ты нашел пасхалку =)</font></p>
 
-<font size="3" color="3333FF" face="Comic Sans MS">Ptichka PROD. <font size="3" color="black" face="Comic Sans MS">(2020 - 2024). <a href="rigts.html">ALL RIGHTS REVERSED</a></p>
+<font size="3" color="3333FF" face="Comic Sans MS">Ptichka production <font size="3" color="black" face="Comic Sans MS">(2020 - 2024). ALL RIGHTS REVERSED</a></p>
 </body>
 </head>
 </html>
