--- a/PICTURES/easteregg.html
+++ b/PICTURES/easteregg.html
@@ -2,7 +2,7 @@
  <head>
   <meta>
   <title>Ptichka production - ?</title>
-  <link rel="icon" href="PICTURES\logo.png">
+  <link rel="icon" href="logo.png">
 <body bg="background="easteregg.jpg">
 <img src="1MAIN.jpg">
 <style>
