--- a/logs.html
+++ b/logs.html
@@ -11,6 +11,10 @@ body { background: url(PICTURES/background.jpg); }
 <link rel="stylesheet" href="style.css">
   <p><font size="5" color="black" face="Comic Sans MS">СПИСОК ИЗМЕНЕНИЙ САЙТА (что то типа логов)</font></p>
   <p><font size="4" color="black" face="Comic Sans MS">Примечание: сортировка событий идет от новых к старым (сверху вниз)</font></p>
+ <p><font size="4.5" color="black" face="Comic Sans MS">17 июня, 2024-й год:</font></p>
+ <ul>
+<li><font size="4" color="black" face="Comic Sans MS">Пасхалка?</font></li>
+ </ul>
 <p><font size="4.5" color="black" face="Comic Sans MS">15 июня, 2024-й год:</font></p>
  <ul>
 <li><font size="4" color="black" face="Comic Sans MS">Добавлена иконка для сайта</font></li>
