--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body { background: url(PICTURES/background.jpg); }
 <p><font size="5" color="black" face="Comic Sans MS">Куда вы хотите отправиться? Если хотите узнать о нас, то перейдите на:</font>
 <p><font size="4" color="black" face="Comic Sans MS"><a href="inform.html">ИНФОРМАЦИОННУЮ СТРАНИЦУ</a></font></p>
 <p><font size="5" color="black" face="Comic Sans MS">Если хотите узнать, чем мы занимаемся, отправьтесь на:</font></p>
-<p><font size="4" color="green" face="Comic Sans MS"><a href="underconstruction.html">СТРАНИЦУ ПРОЕКТОВ</a></font></p>
+<p><font size="4" color="green" face="Comic Sans MS"><a href="coming_soon.htm">СТРАНИЦУ ПРОЕКТОВ</a></font></p>
 <p><font size="5" face="Comic Sans MS" color="black">Если вы хотите узнать об изменениях сайта, то зайдите на:</font></p>
 <p><font size="4" face="Comic Sans MS" color="black"><a href="logs.html">СТРАНИЦУ ИЗМЕНЕНИЙ</a></font></p>
 <p><font size="3" color="black" face="Comic Sans MS">Связаться с нами: <a href="feedback.html">отзывы и предложения</a></font></p>
