--- a/coming_soon.html
+++ b/coming_soon.html
@@ -9,3 +9,6 @@
 body { background: url(PICTURES/background.jpg); }
 </style>
 <link rel="stylesheet" href="style.css">
+  <p><font size="5" face="Comic Sans MS" color="black">Скоро.</font></p>
+ <p><font size="4" face="Comic Sans MS" color="black">Действия:</font></p>
+<p><font size="4" color="green" face="Comic Sans MS"><a href="index.html">На главную</a></font></p>
