--- a/inform.html
+++ b/inform.html
@@ -13,7 +13,9 @@ body { background: url(PICTURES/background.jpg); }
   <p><font size="5" color="black" face="Comic Sans MS">Добро пожаловать на информационную страницу компании <font size="5" color="3333FF" face="Comic Sans MS">Ptichka Production</font></p>
 <p><font size="5" color="black" face="Comic Sans MS">ИСТОРИЯ КОМПАНИИ:</font></p>
 <p><font size="4" color="black" face="Comic Sans MS">Компания основана 26-го сентября 2020-го года двумя школьниками из Пскова, которые создали свою 1-ю игру под названием <a href="underconstruction.html">"FIVE NIGHTS AT STIKMAN"</a> (все еще на этапе <a href="underconstruction.html">ВETA</a>,но уже <a href="underconstruction.html">RC</a>). В то время она называлась "Кепчик PRODUCTION".Компания терпела множество <a href="oldnames.html">редизайонв и переименований</a>. Спустя время компания развилась, переименовалась в "Ptichka production" и на данное время (июнь 2024-го года) в ней всего 2 человека (считая основателя), хотя в Июле 2022-го было 8 человек</font></p>
-<p><font size="4" color="black" face="Comic Sans MS">Страница написана на языке <a href="2ndinfopage.html">"HTML(HyperText Markup Language)"</a> всего за 1 месяц. Данная веб-страница ничем не примечательна, это просто несколько связанных между собой файлов с переходами по ссылкам 
+<p><font size="4" color="black" face="Comic Sans MS">Страница написана на языке <a href="2ndinfopage.html">"HTML(HyperText Markup Language)"</a> всего за 1 месяц. Данная веб-страница ничем не примечательна, это просто несколько связанных между собой файлов с переходами по ссылкам
+ <img src="PICTURES/old.png">
+ <p><font size="3" color="black" face="Comic Sans MS">Так выглядела первая версия сайта</font></p>
 <p><l><font size="4" face="Comic Sans MS" color="black">ВОПРОСЫ:</font></l></p>
 <p><font size="4" color="black" face="Comic Sans MS"><a href="feedback.html">Как можно с вами связаться?</a></font></p>
 <p><font size="4" face="Comic Sans MS" color="black">Действия:</font></p>
