--- a/inform.html
+++ b/inform.html
@@ -1,27 +1,34 @@
+<!--We'll meet again
+Вon't know when
+Don't know where
+But I know we'll meet again
+some sunny day...-->
 <!DOCTYPE html>
 <html>
  <head>
   <meta>
   <title>Ptichka prod. - информацияа</title>
   <link rel="icon" href="PICTURES\logo.png">
- <body bgcolor="grey">
-<style>
-body { background: url(PICTURES/background.jpg); }
-</style>
-<img src="PICTURES/2INFO.jpg">
-<link rel="stylesheet" href="style.css">
-  <p><font size="5" color="black" face="Comic Sans MS">Добро пожаловать на информационную страницу компании <font size="5" color="3333FF" face="Comic Sans MS">Ptichka Production</font></p>
-<p><font size="5" color="black" face="Comic Sans MS">ИСТОРИЯ КОМПАНИИ:</font></p>
-<p><font size="4" color="black" face="Comic Sans MS">Компания основана 26-го сентября 2020-го года двумя школьниками из Пскова, которые создали свою 1-ю игру под названием <a href="underconstruction.html">"FIVE NIGHTS AT STIKMAN"</a> (все еще на этапе <a href="underconstruction.html">ВETA</a>,но уже <a href="underconstruction.html">RC</a>). В то время она называлась "Кепчик PRODUCTION".Компания терпела множество <a href="oldnames.html">редизайонв и переименований</a>. Спустя время компания развилась, переименовалась в "Ptichka production" и на данное время (июнь 2024-го года) в ней всего 2 человека (считая основателя), хотя в Июле 2022-го было 8 человек.</font></p>
-<p><font size="5" color="black" face="Comic Sans MS">НЕМНОГО ОБ ЭТОМ САЙТЕ:</font></p>
-<p><font size="4" color="black" face="Comic Sans MS">Страница написана на языке <a href="2ndinfopage.html">"HTML(HyperText Markup Language)"</a> всего за месяц (тогда были лишь основы). В то время (2023-й год) сайт ничем не примечателен, это было просто несколько связанных между собой файлов с переходами по ссылкам. Сейчас же сайт имеет хост на <a href="github.com">github.com</a>, систему отзывов, более крсивое оформление</font></p>
- <img src="PICTURES/old.png" width="676" height="306">
- <figcaption><font size="3" color="black" face="Comic Sans MS">Так выглядел сайт в 2023-м году</font></figcaption>
-<p><l><font size="4" face="Comic Sans MS" color="black">ВОПРОСЫ:</font></l></p>
-<p><font size="4" color="black" face="Comic Sans MS"><a href="feedback.html">Как можно с вами связаться?</a></font></p>
-<p><font size="4" face="Comic Sans MS" color="black">Действия:</font></p>
-<p><font size="4" color="green" face="Comic Sans MS"><a href="index.html">На главную</a></font></p>
-<font size="3" color="3333FF" face="Comic Sans MS">Ptichka production <font size="3" color="black" face="Comic Sans MS">(May 2023). ALL RIGHTS REVERSED</p>
+  <body bgcolor="grey">
+  <style>
+    body { background: url(PICTURES/background.jpg); }
+  </style>
+    <img src="PICTURES/2INFO.jpg">
+    <link rel="stylesheet" href="style.css">
+    <!--Ура, вакханалия!-->
+    <p><font size="5" color="black">Добро пожаловать на информационную страницу компании <font size="5" color="3333FF">Ptichka Production</font></p>
+    <p><font size="5" color="black">ИСТОРИЯ КОМПАНИИ:</font></p>
+    <p><font size="4" color="black">Компания основана 26-го сентября 2020-го года двумя школьниками из Пскова, которые создали свою 1-ю игру под названием <a href="underconstruction.html">"FIVE NIGHTS AT STIKMAN"</a> (все еще на этапе <a href="underconstruction.html">ВETA</a>,но уже <a href="underconstruction.html">RC</a>). В то время она называлась "Кепчик PRODUCTION".Компания терпела множество <a href="oldnames.html">редизайонв и переименований</a>. Спустя время компания развилась, переименовалась в "Ptichka production" и на данное время (июнь 2024-го года) в ней всего 2 человека (считая основателя), хотя в Июле 2022-го было 8 человек.</font></p>
+    <p><font size="5" color="black">НЕМНОГО ОБ ЭТОМ САЙТЕ:</font></p>
+    <p><font size="4" color="black">Страница написана на языке <a href="2ndinfopage.html">"HTML(HyperText Markup Language)"</a> всего за месяц (тогда были лишь основы). В то время (2023-й год) сайт ничем не примечателен, это было просто несколько связанных между собой файлов с переходами по ссылкам. Сейчас же сайт имеет хост на <a href="github.com">github.com</a>, систему отзывов, более крсивое оформление</font></p>
+    <img src="PICTURES/old.png" width="676" height="306">
+ <figcaption><font size="3" color="black" face="Verdana">Так выглядел сайт в 2023-м году</font></figcaption>
+<p><l><font size="4" face="Verdana" color="black">ВОПРОСЫ:</font></l></p>
+<p><font size="4" color="black" face="Verdana"><a href="feedback.html">Как можно с вами связаться?</a></font></p>
+<p><font size="4" color="black" face="Verdana"><a href="underconstruction.html">Почему поменяли шрифт?</a></font></p>
+<p><font size="4" color="black">Действия:</font></p>
+<p><font size="4" color="green" face="Verdana"><a href="index.html">На главную</a></font></p>
+<font size="3" color="3333FF">Ptichka production <font size="3" color="black">(May 2023). ALL RIGHTS REVERSED</p>
 </head>
 </body>
 </html>
