--- a/logs.html
+++ b/logs.html
@@ -9,36 +9,42 @@
 body { background: url(PICTURES/background.jpg); }
 </style>
 <link rel="stylesheet" href="style.css">
-  <p><font size="5" color="black" face="Comic Sans MS">СПИСОК ИЗМЕНЕНИЙ САЙТА (что то типа логов)</font></p>
-  <p><font size="4" color="black" face="Comic Sans MS">Примечание: сортировка событий идет от новых к старым (сверху вниз)</font></p>
- <p><font size="4.5" color="black" face="Comic Sans MS">17 июня, 2024-й год:</font></p>
- <ul>
-<li><font size="4" color="black" face="Comic Sans MS">Пасхалка?</font></li>
- </ul>
-<p><font size="4.5" color="black" face="Comic Sans MS">15 июня, 2024-й год:</font></p>
- <ul>
-<li><font size="4" color="black" face="Comic Sans MS">Добавлена иконка для сайта</font></li>
- </ul>
-<p><font size="4.5" color="black" face="Comic Sans MS">14 июня, 2024-й год:</font></p>
- <ul>
-<li><font size="4" color="black" face="Comic Sans MS">Добавлен <a href="feedback.html">фидбек (отзывы и предложения)</a></font></li>
-<li><font size="4" color="black" face="Comic Sans MS">Обновился фон</font></li>
-<li><font size="4" color="black" face="Comic Sans MS">Under construction.</font></li>
-<li><font size="4" color="black" face="Comic Sans MS">Сайт стал доспупен по ссылке</font></li>
+  <p><font size="5" color="black" face="Verdana">СПИСОК ИЗМЕНЕНИЙ САЙТА (что то типа логов)</font></p>
+  <p><font size="4" color="black" face="Verdana">Примечание: сортировка событий идет от новых к старым (сверху вниз)</font></p>
+<p><font size="4.5" color="black">9 июля, 2024-й год:</font></p>
+  <ul>
+ <li><font size="4" color="black">Был изменен шрифт из за проблем его отображения на Linux</font></li>
+ <li><font size="4" color="black">Хммм....я думаю вам стоит посмотреть код некоторых страниц, там явно что то есть...</font></li>
+ <li><font size="4" color="black">Разраб сайта пересел на линукс =)</font></li>
   </ul>
-<p><font size="4.5" color="black" face="Comic Sans MS">июнь, 2023-й год:</font></p>
+ <p><font size="4.5" color="black">17 июня, 2024-й год:</font></p>
  <ul>
-<li><font size="4" color="black" face="Comic Sans MS">Cайт был заброшен на неопределенный срок</font</li>
+<li><font size="4" color="black">Пасхалка?</font></li>
  </ul>
-<p><font size="4.5" color="black" face="Comic Sans MS">апрель-май, 2023-й год:</font></p>
+<p><font size="4.5" color="black">15 июня, 2024-й год:</font></p>
  <ul>
-<li><font size="4" color="black" face="Comic Sans MS">Появился фон, изменился шрифт, появились крисивые оформления</font></li>
-<li><font size="4" color="black" face="Comic Sans MS">Появился CSS</font></li>
-<li><font size="4" color="black" face="Comic Sans MS">Cайт появился ввиде HTML страницы</font></li>
+<li><font size="4" color="black">Добавлена иконка для сайта</font></li>
  </ul>
- <p><font size="4" face="Comic Sans MS" color="black">Действия:</font></p>
-<p><font size="4" color="green" face="Comic Sans MS"><a href="index.html">На главную</a></font></p>
-<font size="3" color="3333FF" face="Comic Sans MS">Ptichka production<font size="3" color="black" face="Comic Sans MS">(2020 - 2024). <a href="rigts.html">ALL RIGHTS REVERSED</a></p>
+<p><font size="4.5" color="black">14 июня, 2024-й год:</font></p>
+ <ul>
+<li><font size="4" color="black" face="Verdana">Добавлен <a href="feedback.html">фидбек (отзывы и предложения)</a></font></li>
+<li><font size="4" color="black">Обновился фон</font></li>
+<li><font size="4" color="black">Under construction.</font></li>
+<li><font size="4" color="black">Сайт стал доспупен по ссылке</font></li>
+  </ul>
+<p><font size="4.5" color="black">июнь, 2023-й год:</font></p>
+ <ul>
+<li><font size="4" color="black">Cайт был заброшен на неопределенный срок</font</li>
+ </ul>
+<p><font size="4.5" color="black">апрель-май, 2023-й год:</font></p>
+ <ul>
+<li><font size="4" color="black">Появился фон, изменился шрифт, появились крисивые оформления</font></li>
+<li><font size="4" color="black">Появился CSS</font></li>
+<li><font size="4" color="black">Cайт появился ввиде HTML страницы</font></li>
+ </ul>
+ <p><font size="4" face="Verdana" color="black">Действия:</font></p>
+<p><font size="4" color="green" face="Verdana"><a href="index.html">На главную</a></font></p>
+<font size="3" color="3333FF" face="Verdana">Ptichka production (2020-2024). ALL RIGHTS REVERSED</a></p>
 </body>
 </head>
 </html>
