--- a/oldnames.html
+++ b/oldnames.html
@@ -9,14 +9,14 @@ body { background: url(PICTURES/background.jpg); }
 </style>
 <img src="PICTURES/2INFO.jpg">
 <link rel="stylesheet" href="style.css">
-<p><font size="5" color="black" face="Comic Sans MS">Старые названия:</font></p>
+<p><font size="5" color="black" face="Courier New">Старые названия:</font></p>
   <ul>
-  <li><font size="4" color="black" face="Comic Sans MS">OSCORP ENTERTAMENT</font></li>
-  <li><font size="4" color="black" face="Comic Sans MS">O.W.C.A. (Organization Without a Cool Acronym)</font></li>
-  <li><font size="4" color="black" face="Comic Sans MS">ENTER_FIX</font></li>
-  <p><font size="5" color="black" face="Comic Sans MS">Действия:</font></p>
+  <li><font size="4" color="black" face="Sans">OSCORP ENTERTAMENT</font></li>
+  <li><font size="4" color="black" face="Sans">O.W.C.A. (Organization Without a Cool Acronym)</font></li>
+  <li><font size="4" color="black" face="Sans">ENTER_FIX</font></li>
+  <p><font size="5" color="black" face="Sans">Действия:</font></p>
   </ul>
-<p><font size="4" color="green" face="Comic Sans MS"><a href="inform.html">Вернуться назад</a></font></p>
+<p><font size="4" color="green" face="Courier New"><a href="inform.html">Вернуться назад</a></font></p>
 <font size="3" color="3333FF" face="Comic Sans MS">Ptichka production <font size="3" color="black" face="Comic Sans MS">(2020 - 2024). <a href="rigts.html">ALL RIGHTS REVERSED</a></p>
 </head>
 </body>
