--- a/coming_soon.html
+++ b/coming_soon.html
@@ -1,3 +1,4 @@
+<!--Кажется я все таки жил не зря...-->
 <html>
  <head>
   <meta>
@@ -9,6 +10,6 @@
 body { background: url(PICTURES/background.jpg); }
 </style>
 <link rel="stylesheet" href="style.css">
-  <p><font size="5" face="Comic Sans MS" color="black">Скоро.</font></p>
- <p><font size="4" face="Comic Sans MS" color="black">Действия:</font></p>
-<p><font size="4" color="green" face="Comic Sans MS"><a href="index.html">На главную</a></font></p>
+  <p><font size="5" color="black">Скоро.</font></p>
+ <p><font size="4" face="Verdana" color="black">Действия:</font></p>
+<p><font size="4" color="green" face="Verdana"><a href="index.html">На главную</a></font></p>
