--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
+  <!-- Чи или не чи - вот в чем вопрос.-->
 <html>
  <head>
   <meta>
   <title>Ptichka prod. - главная</title>
- <link rel="icon" href="PICTURES\logo.png">
-<body bg="background="PICTURES\fon.jpg">
-<img src="PICTURES\1MAIN.jpg">
-<style>
-body { background: url(PICTURES/background.jpg); }
-</style>
-<link rel="stylesheet" href="style.css">
-  <p><font size="5" color="black" face="Comic Sans MS">Добро пожаловать на главную страницу компании <font size="5" color="3333FF" face="Comic Sans MS">Ptichka Production<font size="5" color="black" face="Comic Sans MS">!</font></p>
-<p><font size="5" color="black" face="Comic Sans MS">Куда вы хотите отправиться? Если хотите узнать о нас, то перейдите на:</font>
-<p><font size="4" color="black" face="Comic Sans MS"><a href="inform.html">ИНФОРМАЦИОННУЮ СТРАНИЦУ</a></font></p>
-<p><font size="5" color="black" face="Comic Sans MS">Если хотите узнать, чем мы занимаемся, отправьтесь на:</font></p>
-<p><font size="4" color="green" face="Comic Sans MS"><a href="coming_soon.html">СТРАНИЦУ ПРОЕКТОВ</a></font></p>
-<p><font size="5" face="Comic Sans MS" color="black">Если вы хотите узнать об изменениях сайта, то зайдите на:</font></p>
-<p><font size="4" face="Comic Sans MS" color="black"><a href="logs.html">СТРАНИЦУ ИЗМЕНЕНИЙ</a></font></p>
-<p><font size="3" color="black" face="Comic Sans MS">Связаться с нами: <a href="feedback.html">отзывы и предложения</a></font></p>
-
-<font size="3" color="3333FF" face="Comic Sans MS">Ptichka production <font size="3" color="black" face="Comic Sans MS">(2020 - 2024). ALL RIGHTS REVERSED</a></p>
-</body>
-</head>
+  <link rel="icon" href="PICTURES\logo.png">
+    <body bg="background="PICTURES\fon.jpg">
+    <img src="PICTURES\1MAIN.jpg">
+    <style>
+      body { background: url(PICTURES/background.jpg); }
+    </style>
+    <link rel="stylesheet" href="style.css">
+    <p><font size="5" color="black" face="Helvetica">Добро пожаловать на главную страницу компании <font size="5" color="3333FF" face="Sans">Ptichka Production<font size="5" color="black" face="Sans">!</font></p>
+      <p><font size="5" color="black" face="Helvetica">Куда вы хотите отправиться? Если хотите узнать о нас, то перейдите на:</font>
+        <p><font size="4" color="black" face="Verdana"><a href="inform.html">ИНФОРМАЦИОННУЮ СТРАНИЦУ</a></font></p>
+      <p><font size="5" color="black" face="Helvetica">Если хотите узнать, чем мы занимаемся, отправьтесь на:</font></p>
+        <p><font size="4" color="black" face="Verdana"><a href="coming_soon.html">СТРАНИЦУ ПРОЕКТОВ</a></font></p>
+      <p><font size="5" face="Helvetica" color="black">Если вы хотите узнать об изменениях сайта, то зайдите на:</font></p>
+        <p><font size="4" face="Verdana" color="black"><a href="logs.html">СТРАНИЦУ ИЗМЕНЕНИЙ</a></font></p>
+    <p><font size="3" color="black" face="Helvetica">Связаться с нами: <font size="3" color="black" face="Verdana"></font><a href="feedback.html">отзывы и предложения</a></font></p>
+    <p><font size="3" color="3333FF" face="Helvetica">Ptichka production <font size="3" color="black" face="Sans">(2020 - 2024). ALL RIGHTS REVERSED</a></p>
+    </body>
+  </head>
 </html>
