--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
       body { background: url(PICTURES/background.jpg); }
     </style>
     <link rel="stylesheet" href="style.css">
-    <p><font size="5" color="black" face="Helvetica">Добро пожаловать на главную страницу компании <font size="5" color="3333FF" face="Sans">Ptichka Production<font size="5" color="black" face="Sans">!</font></p>
-      <p><font size="5" color="black" face="Helvetica">Куда вы хотите отправиться? Если хотите узнать о нас, то перейдите на:</font>
-        <p><font size="4" color="black" face="Verdana"><a href="inform.html">ИНФОРМАЦИОННУЮ СТРАНИЦУ</a></font></p>
-      <p><font size="5" color="black" face="Helvetica">Если хотите узнать, чем мы занимаемся, отправьтесь на:</font></p>
-        <p><font size="4" color="black" face="Verdana"><a href="projects.html">СТРАНИЦУ ПРОЕКТОВ</a></font></p>
-      <p><font size="5" face="Helvetica" color="black">Если вы хотите узнать об изменениях сайта, то зайдите на:</font></p>
-        <p><font size="4" face="Verdana" color="black"><a href="logs.html">СТРАНИЦУ ИЗМЕНЕНИЙ</a></font></p>
-        <p><font size="5" face="Helvetica" color="black">Анкета для тех, кто хочет к нам:</font></p>
-        <p><font size="4" face="Verdana" color="black"><a href="https://docs.google.com/forms/d/e/1FAIpQLSdiZ_tEZxhDxw91k2RgvuEvXeWoIJVcFgZkJHRBUGk8GFOY4Q/viewform?usp=sf_link">Клик сюда</a></font></p>
-    <p><font size="3" color="black" face="Helvetica">Связаться с нами: <font size="3" color="black" face="Verdana"></font><a href="feedback.html">отзывы и предложения</a></font></p>
-    <p><font size="3" color="3333FF" face="Helvetica">Ptichka production <font size="3" color="black" face="Sans">(2020 - 2024). ALL RIGHTS REVERSED</a></p>
+    <p><font size="5" color="black" face="MS Comic Sans">Добро пожаловать на главную страницу компании <font size="5" color="3333FF" face="MS Comic Sans">Ptichka Production<font size="5" color="black" face="MS Comic Sans">!</font></p>
+      <p><font size="5" color="black" face="MS Comic Sans">Куда вы хотите отправиться? Если хотите узнать о нас, то перейдите на:</font>
+        <p><font size="4" color="black" face="MS Comic Sans"><a href="inform.html">ИНФОРМАЦИОННУЮ СТРАНИЦУ</a></font></p>
+      <p><font size="5" color="black" face="MS Comic Sans">Если хотите узнать, чем мы занимаемся, отправьтесь на:</font></p>
+        <p><font size="4" color="black" face="MS Comic Sans"><a href="projects.html">СТРАНИЦУ ПРОЕКТОВ</a></font></p>
+      <p><font size="5" face="MS Comic Sans" color="black">Если вы хотите узнать об изменениях сайта, то зайдите на:</font></p>
+        <p><font size="4" face="MS Comic Sans" color="black"><a href="logs.html">СТРАНИЦУ ИЗМЕНЕНИЙ</a></font></p>
+        <p><font size="5" face="MS Comic Sans" color="black">Анкета для тех, кто хочет к нам:</font></p>
+        <p><font size="4" face="MS Comic Sans" color="black"><a href="https://docs.google.com/forms/d/e/1FAIpQLSdiZ_tEZxhDxw91k2RgvuEvXeWoIJVcFgZkJHRBUGk8GFOY4Q/viewform?usp=sf_link">Клик сюда</a></font></p>
+    <p><font size="3" color="black" face="MS Comic Sans">Связаться с нами: <font size="3" color="black" face="MS Comic Sans"></font><a href="feedback.html">отзывы и предложения</a></font></p>
+    <p><font size="3" color="3333FF" face="MS Comic Sans">Ptichka production <font size="3" color="black" face="MS Comic Sans">(2020 - 2024). ALL RIGHTS REVERSED</a></p>
     </body>
   </head>
 </html>
