--- a/inform.html
+++ b/inform.html
@@ -16,7 +16,7 @@ some sunny day...-->
     <img src="PICTURES/2INFO.jpg">
     <link rel="stylesheet" href="style.css">
     <!--Ура, вакханалия!-->
-    <p><font size="5" color="black">Добро пожаловать на информационную страницу компании <font size="5" color="3333FF">Ptichka Production</font></p>
+    <p><font size="5" color="black face="Comic Sans MS">Добро пожаловать на информационную страницу компании <font size="5" color="3333FF">Ptichka Production</font></p>
     <p><font size="5" color="black">ИСТОРИЯ КОМПАНИИ:</font></p>
     <p><font size="4" color="black">Компания основана 26-го сентября 2020-го года двумя школьниками из Пскова, которые создали свою 1-ю игру под названием <a href="underconstruction.html">"FIVE NIGHTS AT STIKMAN"</a> (все еще на этапе <a href="underconstruction.html">ВETA</a>,но уже <a href="underconstruction.html">RC</a>). В то время она называлась "Кепчик PRODUCTION".Компания терпела множество <a href="oldnames.html">редизайонв и переименований</a>. Спустя время компания развилась, переименовалась в "Ptichka production" и на данное время (июнь 2024-го года) в ней всего 2 человека (считая основателя), хотя в Июле 2022-го было 8 человек.</font></p>
     <p><font size="5" color="black">НЕМНОГО ОБ ЭТОМ САЙТЕ:</font></p>
